docker kafka working for TLS 1.2, but not 1.1

--- a/local-dev/docker-compose.yml
+++ b/local-dev/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     restart: unless-stopped
 
   esque-kafka:
-    image: wurstmeister/kafka:latest
+    image: wurstmeister/kafka:2.13-2.8.1
     container_name: "esque-kafka"
     ports:
       - "9092:9092"
@@ -30,9 +30,18 @@ services:
 
       KAFKA_SSL_KEYSTORE_LOCATION: "/var/private/ssl/kafka.server.keystore.jks"
       KAFKA_SSL_KEYSTORE_PASSWORD: "changeit"
+      KAFKA_SSL_KEYSTORE_TYPE: "JKS"
+
       KAFKA_SSL_KEY_PASSWORD: "changeit"
       KAFKA_SSL_TRUSTSTORE_LOCATION: "/var/private/ssl/kafka.server.truststore.jks"
       KAFKA_SSL_TRUSTSTORE_PASSWORD: "changeit"
+      KAFKA_SSL_TRUSTSTORE_TYPE: "JKS"
+
+
+      KAFKA_SSL_CLIENT_AUTH: "required"
+      KAFKA_SSL_ENABLED_PROTOCOLS: "TLSv1.2,TLSv1.3"
+      KAFKA_SSL_PROTOCOL: "TLSv1.3"
+
       KAFKA_CREATE_TOPICS: "testtopic:1:1"
       KAFKA_DELETE_TOPIC_ENABLE: "true"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
